# advent-of-code-2021

./: .gitignore  CMakeLists.txt
src/include/: aoc-2021.hpp  bingo.hpp
src/lib/: aoc-2021.cpp  bingo.cpp
